<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/hikeNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="52dp"
        android:text="Name of Hike"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/locationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Location"
        app:layout_constraintStart_toStartOf="@+id/dateText"
        app:layout_constraintTop_toBottomOf="@+id/dateText" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="20dp"
        android:text="Date of Hike"
        app:layout_constraintStart_toStartOf="@+id/hikeNameText"
        app:layout_constraintTop_toBottomOf="@+id/hikeNameText" />

    <TextView
        android:id="@+id/parkingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Parking Available"
        app:layout_constraintEnd_toEndOf="@+id/parkingChoice"
        app:layout_constraintStart_toEndOf="@+id/parkingChoice"
        app:layout_constraintTop_toBottomOf="@+id/difficultyChoice" />

    <RadioGroup
        android:id="@+id/parkingChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:theme="@style/enterHikeDetailPage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parkingText">

        <RadioButton
            android:id="@+id/radio_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:theme="@style/enterHikeDetailPage" />

        <RadioButton
            android:id="@+id/radio_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no" />
    </RadioGroup>

    <TextView
        android:id="@+id/lengthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="115dp"
        android:layout_marginBottom="117dp"
        android:text="Length of Hike"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parkingChoice" />

    <TextView
        android:id="@+id/difficultyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Level of Difficulty"
        app:layout_constraintEnd_toEndOf="@+id/locationText"
        app:layout_constraintStart_toEndOf="@+id/locationText"
        app:layout_constraintTop_toBottomOf="@+id/locationText" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Description"
        app:layout_constraintStart_toStartOf="@+id/parkingChoice"
        app:layout_constraintTop_toBottomOf="@+id/parkingChoice" />

    <RadioGroup
        android:id="@+id/difficultyChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:theme="@style/enterHikeDetailPage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficultyText">

        <RadioButton
            android:id="@+id/radio_easy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/easy"
            android:theme="@style/enterHikeDetailPage" />

        <RadioButton
            android:id="@+id/radio_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/radio_hard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hard" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>
