<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/hikeNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name of Hike"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="74dp" />

    <TextView
        android:id="@+id/locationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Location"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="115dp" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Date of Hike"
        app:layout_constraintBottom_toTopOf="@+id/editTextDate"
        tools:layout_editor_absoluteX="35dp" />

    <TextView
        android:id="@+id/parkingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Parking Available"
        tools:layout_editor_absoluteX="220dp"
        tools:layout_editor_absoluteY="506dp" />

    <TextView
        android:id="@+id/lengthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Length of Hike"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="544dp" />

    <TextView
        android:id="@+id/difficultyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="Level of Difficulty"
        app:layout_constraintBottom_toTopOf="@+id/difficultyChoice"
        tools:layout_editor_absoluteX="35dp" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Description"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="653dp" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="230dp" />

    <RadioGroup
        android:id="@+id/difficultyChoice"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:theme="@style/enterHikeDetailPage"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="371dp">
        <RadioButton
            android:id="@+id/radio_easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easy"
            android:theme="@style/enterHikeDetailPage" />
        <RadioButton
            android:id="@+id/radio_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium" />
        <RadioButton
            android:id="@+id/radio_hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>
